[tool.poetry]
name = "plra"
version = "0.1.0"
description = ""
authors = ["Joel Turner <Joel_turner@wiwd.uscourts.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
python-dotenv = "^0.19.0"
openpyxl = "^3.0.8"
python-Levenshtein = "^0.12.2"
xlrd = "^2.0.1"
fuzzywuzzy = "^0.18.0"
fuzz = "^0.1.1"
SQLAlchemy = "^1.4.23"
pydantic = "^1.8.2"
pyOpenSSL = "^22.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = '*'
Sphinx = '*'
pytest-bdd = '*'
alembic = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"