[tool.poetry]
name = "plra"
version = "0.1.0"
description = ""
authors = ["Joel Turner <joel_turner@wiwd.uscourts.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
python-dotenv = "^0.21.0"
openpyxl = "^3.0.10"
pydantic = "^1.10.2"
python-levenshtein = "^0.20.7"
xlrd = "^2.0.1"
fuzzywuzzy = "^0.18.0"
fuzz = "^0.1.1"
sqlalchemy = "^1.4.42"
pyopenssl = "^22.1.0"
requests = "^2.28.1"
colorama = "^0.4.6"
aiohttp = "^3.8.5"
aiolimiter = "^1.1.0"
backoff = "^2.2.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules ,
]
ignore = ["F401"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 30
